fix: keep 'Рі. Р‘РµР»РіРѕСЂРѕРґ' on one line in hero title

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         </svg>
                         <span>Проект бесплатно при заказе строительства</span>
                     </div>
-                    <h1 class="hero__title">Строительство домов в г. Белгород и Белгородском районе</h1>
+                    <h1 class="hero__title">Строительство домов в г.&nbsp;Белгород и Белгородском районе</h1>
                     <div class="hero__proof">
                         <div class="hero__proof-item">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
