--- a/src/html/index.template.html
+++ b/src/html/index.template.html
@@ -24,6 +24,7 @@
     <!-- @include partials/footer.html -->
     <!-- @include partials/floating-buttons.html -->
     <!-- @include partials/gallery-modal.html -->
+    <!-- @include partials/privacy-modal.html -->
     
     <script src="js/main.js"></script>
 </body>
