fix: navigation and buttons fixes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="АЛЕВИТ СТРОЙ - Дома под ключ в Белгороде | Гарантия 5 лет">
     <meta name="twitter:description" content="Строительство домов под ключ в Белгороде. Опыт 6+ лет, 60+ домов. Фиксированная цена по договору, гарантия 5 лет.">
-    <meta name="twitter:image" content="https://alevit-stroy.ru/images/logo.png">
+    <meta name="twitter:image" content="https://alevit-stroy.ru/logo.png">
     
     <!-- Canonical URL -->
     <link rel="canonical" href="https://alevit-stroy.ru/">
@@ -169,8 +169,8 @@
                         </div>
                     </div>
                     <div class="hero__cta">
-                        <button class="btn btn--primary" onclick="document.querySelector('#calculator').scrollIntoView({behavior: 'smooth'})">Рассчитать стоимость</button>
-                        <button class="btn btn--secondary" onclick="document.querySelector('#cta').scrollIntoView({behavior: 'smooth'})">Получить бесплатный проект</button>
+                        <a href="#calculator" class="btn btn--primary">Рассчитать стоимость</a>
+                        <a href="#cta" class="btn btn--secondary">Получить бесплатный проект</a>
                     </div>
                 </div>
             </div>
@@ -504,14 +504,14 @@
                     <div class="about__team-grid">
                         <div class="about__team-member">
                             <div class="about__team-photo">
-                                <img src="logo.png" alt="Логотип компании АЛЕВИТ СТРОЙ" class="about__team-img" loading="lazy">
+                                <img src="images/logo.png" alt="Логотип компании АЛЕВИТ СТРОЙ" class="about__team-img" loading="lazy">
                             </div>
                             <h4 class="about__team-name">Руководитель</h4>
                             <p class="about__team-position">Основатель компании</p>
                         </div>
                         <div class="about__team-member">
                             <div class="about__team-photo">
-                                <img src="logo.png" alt="Логотип компании АЛЕВИТ СТРОЙ" class="about__team-img" loading="lazy">
+                                <img src="images/logo.png" alt="Логотип компании АЛЕВИТ СТРОЙ" class="about__team-img" loading="lazy">
                             </div>
                             <h4 class="about__team-name">Руководитель</h4>
                             <p class="about__team-position">Директор по строительству</p>
