feat: complete calculator task

--- a/index.html
+++ b/index.html
@@ -235,6 +235,75 @@
                 </div>
             </div>
         </section>
+        <!-- CALCULATOR - Калькулятор стоимости -->
+        <!-- ============================================ -->
+        <section class="calculator" id="calculator">
+            <div class="calculator__container">
+                <h2 class="calculator__title">Калькулятор стоимости дома</h2>
+                <p class="calculator__subtitle">Рассчитайте примерную стоимость вашего будущего дома</p>
+                <div class="calculator__wrapper">
+                    <div class="calculator__form-wrapper">
+                        <form class="calculator__form" id="calculator-form">
+                            <div class="calculator__form-group">
+                                <label for="calc-area" class="calculator__form-label">Площадь дома (м²)</label>
+                                <input type="number" id="calc-area" name="area" class="calculator__form-input" placeholder="120" min="20" max="500" value="120" required>
+                                <span class="calculator__form-hint">От 20 до 500 м²</span>
+                            </div>
+                            <div class="calculator__form-group">
+                                <label for="calc-type" class="calculator__form-label">Тип дома</label>
+                                <select id="calc-type" name="type" class="calculator__form-select" required>
+                                    <option value="gas-block">Газобетон</option>
+                                    <option value="brick">Кирпич</option>
+                                </select>
+                            </div>
+                            <div class="calculator__form-group">
+                                <label for="calc-floors" class="calculator__form-label">Этажность</label>
+                                <select id="calc-floors" name="floors" class="calculator__form-select" required>
+                                    <option value="1">1 этаж</option>
+                                    <option value="2">2 этажа</option>
+                                </select>
+                            </div>
+                            <div class="calculator__form-group">
+                                <label for="calc-finish" class="calculator__form-label">Формат отделки</label>
+                                <select id="calc-finish" name="finish" class="calculator__form-select" required>
+                                    <option value="box">Коробка</option>
+                                    <option value="clean">Чистовая отделка</option>
+                                    <option value="turnkey">Под ключ</option>
+                                </select>
+                            </div>
+                            <button type="submit" class="btn btn--primary calculator__form-submit">Рассчитать стоимость</button>
+                        </form>
+                    </div>
+                    <div class="calculator__result" id="calculator-result">
+                        <div class="calculator__result-content">
+                            <h3 class="calculator__result-title">Примерная стоимость</h3>
+                            <div class="calculator__result-price">
+                                <span class="calculator__result-price-label">от</span>
+                                <span class="calculator__result-price-value" id="result-price">—</span>
+                                <span class="calculator__result-price-currency">₽</span>
+                            </div>
+                            <p class="calculator__result-note">Точную стоимость рассчитаем после консультации</p>
+                            <a href="#cta" class="btn btn--secondary calculator__result-cta">Получить точный расчёт</a>
+
+                            <div class="calculator__prices" id="calculator-prices">
+                                <div class="calculator__prices-row">
+                                    <span class="calculator__prices-label">Под самоотделку</span>
+                                    <span class="calculator__prices-value" data-price-key="shell">45 000 ₽/м²</span>
+                                </div>
+                                <div class="calculator__prices-row">
+                                    <span class="calculator__prices-label">Чистовая отделка</span>
+                                    <span class="calculator__prices-value" data-price-key="clean">65 000 ₽/м²</span>
+                                </div>
+                                <div class="calculator__prices-row">
+                                    <span class="calculator__prices-label">Под ключ</span>
+                                    <span class="calculator__prices-value" data-price-key="turnkey">80 000 ₽/м²</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- PROJECTS - Типовые проекты домов -->
         <!-- ============================================ -->
         <section class="projects" id="projects">
@@ -470,61 +539,6 @@
                 </div>
                 <div class="about__cta">
                     <a href="#cta" class="btn btn--primary">Начать строительство</a>
-                </div>
-            </div>
-        </section>
-        <!-- CALCULATOR - Калькулятор стоимости -->
-        <!-- ============================================ -->
-        <section class="calculator" id="calculator">
-            <div class="calculator__container">
-                <h2 class="calculator__title">Калькулятор стоимости дома</h2>
-                <p class="calculator__subtitle">Рассчитайте примерную стоимость вашего будущего дома</p>
-                <div class="calculator__wrapper">
-                    <div class="calculator__form-wrapper">
-                        <form class="calculator__form" id="calculator-form">
-                            <div class="calculator__form-group">
-                                <label for="calc-area" class="calculator__form-label">Площадь дома (м²)</label>
-                                <input type="number" id="calc-area" name="area" class="calculator__form-input" placeholder="120" min="20" max="500" value="120" required>
-                                <span class="calculator__form-hint">От 20 до 500 м²</span>
-                            </div>
-                            <div class="calculator__form-group">
-                                <label for="calc-type" class="calculator__form-label">Тип дома</label>
-                                <select id="calc-type" name="type" class="calculator__form-select" required>
-                                    <option value="gas-block">Газобетон</option>
-                                    <option value="brick">Кирпич</option>
-                                    <option value="frame">Каркас</option>
-                                </select>
-                            </div>
-                            <div class="calculator__form-group">
-                                <label for="calc-finish" class="calculator__form-label">Формат отделки</label>
-                                <select id="calc-finish" name="finish" class="calculator__form-select" required>
-                                    <option value="box">Коробка</option>
-                                    <option value="clean">Чистовая отделка</option>
-                                    <option value="turnkey">Под ключ</option>
-                                </select>
-                            </div>
-                            <div class="calculator__form-group">
-                                <label class="calculator__form-checkbox">
-                                    <input type="checkbox" name="agreement" id="calc-agreement" required aria-describedby="calc-agreement-error" aria-invalid="false">
-                                    <span>Я согласен на <a href="#" class="calculator__form-link" data-privacy-modal>обработку персональных данных</a></span>
-                                </label>
-                                <span class="calculator__form-error" id="calc-agreement-error" role="alert" aria-live="polite"></span>
-                            </div>
-                            <button type="submit" class="btn btn--primary calculator__form-submit">Рассчитать стоимость</button>
-                        </form>
-                    </div>
-                    <div class="calculator__result" id="calculator-result">
-                        <div class="calculator__result-content">
-                            <h3 class="calculator__result-title">Примерная стоимость</h3>
-                            <div class="calculator__result-price">
-                                <span class="calculator__result-price-label">от</span>
-                                <span class="calculator__result-price-value" id="result-price">—</span>
-                                <span class="calculator__result-price-currency">₽</span>
-                            </div>
-                            <p class="calculator__result-note">Точную стоимость рассчитаем после консультации</p>
-                            <a href="#cta" class="btn btn--secondary calculator__result-cta">Получить точный расчёт</a>
-                        </div>
-                    </div>
                 </div>
             </div>
         </section>
