feat: РґРѕР±Р°РІРёС‚СЊ СѓСЃР»РѕРІРёСЏ РѕРїР»Р°С‚С‹ РІ Hero-Р±Р»РѕРє РіР»Р°РІРЅРѕР№ СЃС‚СЂР°РЅРёС†С‹

--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@
                             </svg>
                             <span><strong>100%</strong> фиксированная цена</span>
                         </div>
+                        <p class="hero__proof-payment">
+                            В ипотеку, за наличные и по безналу, а также по эскроу‑счёту и сертификатам
+                        </p>
                     </div>
                     <div class="hero__cta">
                         <a href="#calculator" class="btn btn--primary">Рассчитать стоимость</a>
