Add services section with images and update process
Introduced a new 'Дополнительные услуги' section in index.html with service cards and realistic images. Added service images and prompts for generation. Updated process steps, project subtitle, and removed old services block. Minor text adjustments and completed status in changes.md.

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
         <section class="projects" id="projects">
             <div class="projects__container">
                 <h2 class="projects__title">Типовые проекты домов</h2>
-                <p class="projects__subtitle">Выберите готовый проект или закажите индивидуальное проектирование</p>
+                <p class="projects__subtitle">Строительство от 3 месяцев. Выберите готовый проект или закажите индивидуальное проектирование</p>
                 
                 <!-- Переключатели категорий -->
                 <div class="projects__tabs" role="tablist" aria-label="Выбор категории проектов">
@@ -352,6 +352,87 @@
                 </div>
             </div>
         </section>
+        <!-- SERVICES - Дополнительные услуги -->
+        <!-- ============================================ -->
+        <section class="services" id="services">
+            <div class="services__container">
+                <h2 class="services__title">Дополнительные услуги</h2>
+                <div class="services__grid">
+                    <div class="services__card">
+                        <div class="services__card-image">
+                            <img src="images/services/service-mortgage.png" alt="Ипотека" class="services__card-img">
+                        </div>
+                        <div class="services__card-content">
+                            <h3 class="services__card-title">Ипотека</h3>
+                            <p class="services__card-text">Помогаем оформить ипотеку на строительство дома. Работаем с ведущими банками. Выгодные процентные ставки и быстрая обработка заявок.</p>
+                        </div>
+                    </div>
+                    <div class="services__card">
+                        <div class="services__card-image">
+                            <img src="images/services/service-land-selection.png" alt="Подбор участка" class="services__card-img">
+                        </div>
+                        <div class="services__card-content">
+                            <h3 class="services__card-title">Подбор участка</h3>
+                            <p class="services__card-text">Поможем найти и выбрать подходящий участок для строительства вашего дома. Учитываем все требования: расположение, коммуникации, рельеф.</p>
+                        </div>
+                    </div>
+                    <div class="services__card">
+                        <div class="services__card-image">
+                            <img src="images/services/service-design.png" alt="Проектирование" class="services__card-img">
+                        </div>
+                        <div class="services__card-content">
+                            <h3 class="services__card-title">Проектирование</h3>
+                            <p class="services__card-text">Индивидуальное проектирование или адаптация типового проекта под ваши требования. Учитываем все пожелания и особенности участка.</p>
+                        </div>
+                    </div>
+                    <div class="services__card">
+                        <div class="services__card-image">
+                            <img src="images/services/service-roofing.png" alt="Кровельные работы" class="services__card-img">
+                        </div>
+                        <div class="services__card-content">
+                            <h3 class="services__card-title">Кровельные работы</h3>
+                            <p class="services__card-text">Предлагаем услуги по обустройству кровли из металлочерепицы по современной технологии. Крыша прослужит Вам долгие годы.</p>
+                        </div>
+                    </div>
+                    <div class="services__card">
+                        <div class="services__card-image">
+                            <img src="images/services/service-foundation.png" alt="Фундамент для дома" class="services__card-img">
+                        </div>
+                        <div class="services__card-content">
+                            <h3 class="services__card-title">Фундамент для дома</h3>
+                            <p class="services__card-text">Полный комплекс услуг по закладке фундамента, включая проектирование, геологические изыскания, земляные работы.</p>
+                        </div>
+                    </div>
+                    <div class="services__card">
+                        <div class="services__card-image">
+                            <img src="images/services/service-septic-tank.png" alt="Установка септиков" class="services__card-img">
+                        </div>
+                        <div class="services__card-content">
+                            <h3 class="services__card-title">Установка септиков</h3>
+                            <p class="services__card-text">Профессиональная установка септиков для эффективной и экологичной системы автономной канализации вашего дома.</p>
+                        </div>
+                    </div>
+                    <div class="services__card">
+                        <div class="services__card-image">
+                            <img src="images/services/service-engineering-systems.png" alt="Монтаж инженерных систем" class="services__card-img">
+                        </div>
+                        <div class="services__card-content">
+                            <h3 class="services__card-title">Монтаж инженерных систем</h3>
+                            <p class="services__card-text">Профессиональный монтаж отопления, водоснабжения и котельных для комфортного и безопасного проживания в вашем доме.</p>
+                        </div>
+                    </div>
+                    <div class="services__card">
+                        <div class="services__card-image">
+                            <img src="images/services/service-well-drilling.png" alt="Бурение скважин" class="services__card-img">
+                        </div>
+                        <div class="services__card-content">
+                            <h3 class="services__card-title">Бурение скважин</h3>
+                            <p class="services__card-text">Бурим скважины различного диаметра и глубины в любых типах грунта, а также подбираем и устанавливаем насосное оборудование.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- PROCESS - Этапы строительства -->
         <!-- ============================================ -->
         <section class="process" id="process">
@@ -366,6 +447,7 @@
                         <div class="process__step-content">
                             <h3 class="process__step-title">Консультация</h3>
                             <p class="process__step-text">Обсуждение ваших пожеланий, выбор проекта, расчёт стоимости</p>
+                            <p class="process__step-text process__step-text--phone">Оставляете заявку на сайте или по телефону <span class="process__step-phone" id="process-consultation-phone">+7 (111) 111-11-11</span></p>
                         </div>
                     </div>
                     <div class="process__step">
@@ -401,7 +483,7 @@
                         </div>
                         <div class="process__step-content">
                             <h3 class="process__step-title">Коробка</h3>
-                            <p class="process__step-text">Возведение стен, перекрытия, кровля</p>
+                            <p class="process__step-text">Возведение стен, перекрытия, кровля, установка дверей и окон</p>
                         </div>
                     </div>
                     <div class="process__step">
@@ -419,7 +501,7 @@
                         </div>
                         <div class="process__step-content">
                             <h3 class="process__step-title">Отделка</h3>
-                            <p class="process__step-text">Внутренняя и внешняя отделка, установка дверей и окон</p>
+                            <p class="process__step-text">Внутренняя и внешняя отделка</p>
                         </div>
                     </div>
                     <div class="process__step">
@@ -430,40 +512,6 @@
                             <h3 class="process__step-title">Сдача объекта</h3>
                             <p class="process__step-text">Приёмка работ, подписание актов, передача ключей</p>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- SERVICES - Услуги (ипотека, участок, проектирование) -->
-        <!-- ============================================ -->
-        <section class="services" id="services">
-            <div class="services__container">
-                <h2 class="services__title">Дополнительные услуги</h2>
-                <p class="services__subtitle">Помогаем на всех этапах строительства</p>
-                <div class="services__grid">
-                    <div class="services__card">
-                        <div class="services__card-icon">
-                            <img src="images/icons/icon-mortgage-document.png" alt="Ипотека" class="services__card-icon-img">
-                        </div>
-                        <h3 class="services__card-title">Ипотека</h3>
-                        <p class="services__card-text">Помогаем оформить ипотеку на строительство дома. Работаем с ведущими банками. Выгодные процентные ставки и быстрая обработка заявок.</p>
-                        <button class="btn btn--primary">Узнать подробнее</button>
-                    </div>
-                    <div class="services__card">
-                        <div class="services__card-icon">
-                            <img src="images/icons/icon-land-plot.png" alt="Подбор участка" class="services__card-icon-img">
-                        </div>
-                        <h3 class="services__card-title">Подбор участка</h3>
-                        <p class="services__card-text">Поможем найти и выбрать подходящий участок для строительства вашего дома. Учитываем все требования: расположение, коммуникации, рельеф.</p>
-                        <button class="btn btn--primary">Узнать подробнее</button>
-                    </div>
-                    <div class="services__card">
-                        <div class="services__card-icon">
-                            <img src="images/icons/icon-blueprint-design.png" alt="Проектирование" class="services__card-icon-img">
-                        </div>
-                        <h3 class="services__card-title">Проектирование</h3>
-                        <p class="services__card-text">Индивидуальное проектирование или адаптация типового проекта под ваши требования. Учитываем все пожелания и особенности участка.</p>
-                        <button class="btn btn--primary">Узнать подробнее</button>
                     </div>
                 </div>
             </div>
