Update footer location text and mark tasks complete
Changed footer text to specify 'Белгороде и Белгородском районе' instead of 'Белгородской области' in index.html and footer.html. Updated changes.md to mark FAQ and free project tasks as completed.

--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@
                 </div>
                 <div class="footer__info">
                     <p class="footer__text">ООО «АЛЕВИТ СТРОЙ»</p>
-                    <p class="footer__text">Строительство домов под ключ в Белгородской области</p>
+                    <p class="footer__text">Строительство домов под ключ в Белгороде и Белгородском районе</p>
                 </div>
                 <div class="footer__links">
                     <a href="/privacy.html" class="footer__link">Политика конфиденциальности</a>
