Add interactive map section with Yandex Maps integration
Introduced a new 'Карта объектов' section to display built and under-construction houses on a Yandex Map. Updated works data to include coordinates, added new map HTML and JS components, and adjusted related styles and templates. Refactored contacts section markup for clarity and future extensibility.

--- a/src/html/index.template.html
+++ b/src/html/index.template.html
@@ -16,6 +16,7 @@
         <!-- @include partials/reviews.html -->
         <!-- @include partials/faq.html -->
         <!-- @include partials/cta.html -->
+        <!-- @include partials/map.html -->
     </main>
     
     <!-- @include partials/footer.html -->
